--- a/content/BlazorBffAzureAD/Client/_Imports.razor
+++ b/content/BlazorBffAzureAD/Client/_Imports.razor
@@ -7,5 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using BlazorHosted.Client
-@using BlazorHosted.Client.Shared
+@using BlazorBffAzureAD.Client
+@using BlazorBffAzureAD.Client.Shared
