--- a/contentaad/BlazorBffAzureAD/Client/Pages/GraphApiCall.razor
+++ b/contentaad/BlazorBffAzureAD/Client/Pages/GraphApiCall.razor
@@ -31,7 +31,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        apiData = await Http.GetFromJsonAsync<string[]>("api/GraphApiCalls").ConfigureAwait(false);
+        apiData = await Http.GetFromJsonAsync<string[]>("api/GraphApiCalls");
     }
 
 }
