--- a/content/BlazorBffAzureAD/Client/Pages/GraphApiCall.razor
+++ b/content/BlazorBffAzureAD/Client/Pages/GraphApiCall.razor
@@ -1,5 +1,6 @@
 ﻿@page "/graphapicall"
 @inject HttpClient Http
+@inject IJSRuntime JSRuntime
 
 <h1>Data from Graph API</h1>
 
@@ -31,6 +32,10 @@ else
 
     protected override async Task OnInitializedAsync()
     {
+         var token = await JSRuntime.InvokeAsync<string>("getAntiForgeryToken");
+
+        Http.DefaultRequestHeaders.Add("X-XSRF-TOKEN", token);
+
         apiData = await Http.GetFromJsonAsync<string[]>("api/GraphApiCalls");
     }
 
