use auth handler for secure requests

--- a/content/BlazorBffAzureAD/Client/Pages/GraphApiCall.razor
+++ b/content/BlazorBffAzureAD/Client/Pages/GraphApiCall.razor
@@ -1,5 +1,5 @@
 ﻿@page "/graphapicall"
-@inject HttpClient Http
+@inject IHttpClientFactory httpClientFactory
 @inject IJSRuntime JSRuntime
 
 <h1>Data from Graph API</h1>
@@ -34,9 +34,9 @@ else
     {
         var token = await JSRuntime.InvokeAsync<string>("getAntiForgeryToken");
 
-        Http.DefaultRequestHeaders.Add("X-XSRF-TOKEN", token);
+        var client = httpClientFactory.CreateClient("authorizedClient");
+        client.DefaultRequestHeaders.Add("X-XSRF-TOKEN", token);
 
-        apiData = await Http.GetFromJsonAsync<string[]>("api/GraphApiCalls");
+        apiData = await client.GetFromJsonAsync<string[]>("api/GraphApiCalls");
     }
-
 }
