--- a/content/BlazorBffAzureAD/Client/Shared/NavMenu.razor
+++ b/content/BlazorBffAzureAD/Client/Shared/NavMenu.razor
@@ -25,6 +25,11 @@
                         <span class="oi oi-list-rich" aria-hidden="true"></span> Graph API call
                     </NavLink>
                 </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="adminapicall">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Admin API CAE
+                    </NavLink>
+                </li>
 
             </Authorized>
             <NotAuthorized>
@@ -40,7 +45,7 @@
 @code {
     private bool collapseNavMenu = true;
 
-    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
     private void ToggleNavMenu()
     {
